# detoxai

./: .gitignore  .readthedocs.yaml  README.md  README_pypi.md  cavs.ipynb  debisas_demo.ipynb  evaluation.py  hello.py  interface.py  interface_helpers.py  load_activations.ipynb  mcda_helpers.py  pyproject.toml  requirements.txt  results_class.py  setup.py  test.ipynb
.github/workflows/: build_and_publish.yml
cavs/: cav.py  extract_activations.py  mass_mean_probe.py  tcav.py
datasets/catalog/: download.py
datasets/pubfig/: labels.txt
docs/: conf.py  detoxai.rst  examples.rst  index.rst  tutorials.adding_a_method.rst  tutorials.rst
docs/examples/: example.ipynb
examples/: demo.ipynb  demo.py  example.ipynb  example1.ipynb  short_example.ipynb
methods/: model_correction.py
methods/clarcs/: aclarc.py  clarc.py  hooks.py  rrclarc.py
methods/leace/: leace.py
methods/savani/: adversarial.py  lay_wis_opt.py  random_perturbation.py  savani_base.py  utils.py  zhang.py
model_correction/: __init__.py  aclarc.py  base_correction_method.py  base_model_correction.py  clarc.py  helpers.py  hooks.py  leace.py  model_correction.py  pclarc.py  rrclarc.py  rrr.py  start_model_correction.py  threshold_optimizer.py
model_correction/legacy/: clarc.py  rrc.py
model_correction/savani/: __init__.py  utils.py  (+4 more)
src/: evaluation.py
tcav/: cav.py  extract_activations.py  global_collect_relevances_and_activations.py  mass_mean_probe.py  measure_tcav.py  prepare_for_evaluation.py  tcav.py
tests/: test_metrics.py  test_reject_option_classification.py
utils/: datasets.py
(+42 files in other folders)
